# stemma

./: .gitattributes  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md
stemma-api/: Cargo.toml  README.md
stemma-api/src/: main.rs
stemma-artifacts/: Cargo.toml  README.md
stemma-artifacts/src/: lib.rs  task_manifest.rs
stemma-cli/: Cargo.toml  README.md
stemma-cli/examples/: approved-worklist.json  refused-worklist.json
stemma-cli/src/: apply.rs  main.rs  verify_task.rs
stemma-cli/tests/: cli.rs
stemma-engine/: Cargo.toml  Justfile  README.md
stemma-engine/docs/: domain-model.md  invariants.md  summary.md  testing_strategy.md
stemma-engine/docs/spec-compliance/: CONFORMANCE-SWEEP-SUMMARY.md  conformance-area-map.md  word-compliance-abstractnum_num_instance_binding.md  word-compliance-alt_format_import_altchunk_subdoc.md  word-compliance-columns_docgrid_layout.md  word-compliance-comments_bookmarks_permissions.md  word-compliance-complex_field_structure.md  word-compliance-custom_xml_smart_tags.md  word-compliance-default_style_and_general_flags.md  word-compliance-field_codes_formatting_formulas.md  word-compliance-font_embedding_obfuscation.md  word-compliance-font_table_elements_matching.md  word-compliance-footnote_endnote_numbering_placement.md  word-compliance-footnote_endnote_references.md  word-compliance-form_fields_ffdata.md  word-compliance-glossary_document_docparts.md  word-compliance-headers_footers_references_types.md  word-compliance-hyperlink_element.md  word-compliance-linked_styles_pairing.md  word-compliance-lvltext_numfmt_rendering.md  word-compliance-mce_alternatecontent_resolution.md  word-compliance-mce_roundtrip_preservation.md  word-compliance-numbering_overrides_restart.md  word-compliance-numbering_styles_link.md  word-compliance-numbering_tracked_change_accept_reject.md  word-compliance-omml_math_structure_roundtrip.md  word-compliance-omml_math_tracked_changes.md  word-compliance-onoff_boolean_semantics.md  word-compliance-opc_content_types_stream.md  word-compliance-opc_core_properties_metadata.md  word-compliance-opc_relationships_addressing.md  word-compliance-opc_zip_physical_package.md  word-compliance-page_geometry_pgsz_pgmar.md  word-compliance-page_numbering_line_numbering_borders_misc.md  word-compliance-para_borders_shading.md  word-compliance-para_indent_spacing_alignment.md  word-compliance-para_mark_rpr.md  word-compliance-para_numbering_style_frame.md  word-compliance-para_pagination_keep_control.md  word-compliance-para_tabs_custom_stops.md  (+33 more)
stemma-engine/docs/user/: guide.md
stemma-engine/examples/: bench.rs  my_first_edit.rs  quickstart.rs  redline_from_two_files.rs  resolve_a_redline.rs  review_before_save.rs  revision_roundtrip.rs  walk_the_document.rs
stemma-engine/src/: api.rs  audit.rs  compat.rs  diff.rs  docprops.rs  docx.rs  docx_package.rs  docx_validate.rs  docx_validate_annotations.rs  docx_validate_namespaces.rs  docx_validate_ordering.rs  docx_validate_xref.rs  edit_v4.rs  extended_markdown.rs  html.rs  import.rs  lib.rs  manual_markup.rs  normalize.rs  numbering.rs  opaque_meta.rs  opaque_splice.rs  opaque_targets.rs  redline_extract.rs  resolution_rules.rs  roundtrip_compare.rs  runtime.rs  semantic_hash.rs  settings.rs  styles.rs  table.rs  table_diff.rs  tracked_model.rs  view.rs  vocabulary.rs  word_ir.rs  word_xml.rs  xml_attrs.rs  xml_write.rs
stemma-engine/src/domain/: mod.rs  story.rs
stemma-engine/src/edit/: AGENTS.md  markup.rs  mod.rs  pending_parts.rs  story_addr.rs
stemma-engine/src/edit_v4/: catalog.rs
stemma-engine/src/serialize/: mod.rs  notes.rs  sdt.rs  style_def.rs
stemma-engine/testdata/: index.json
stemma-engine/testdata/barriers/: field.docx  hyperlink.docx  sdt.docx
stemma-engine/testdata/footnotes/: metadata.json
stemma-engine/testdata/footnotes-wc020/: metadata.json
stemma-engine/testdata/image-math-combined/: metadata.json
stemma-engine/testdata/image-math-wc030/: metadata.json
stemma-engine/testdata/images/: metadata.json
stemma-engine/testdata/long-table/: metadata.json
stemma-engine/testdata/math-equations/: after.docx  metadata.json
stemma-engine/testdata/math-wc021/: metadata.json
stemma-engine/testdata/notes_carveout_baseline/: word__endnotes.xml  word__footnotes.xml
stemma-engine/testdata/opaque-roundtrip/: after.docx  before.docx  create_docs.py  metadata.json
stemma-engine/testdata/ordering-alternating-deletions/: after.docx  before.docx  metadata.json
stemma-engine/testdata/ordering-delete-around-middle/: after.docx  before.docx  metadata.json
stemma-engine/testdata/ordering-deletion-consecutive/: after.docx  before.docx  metadata.json
stemma-engine/testdata/ordering-deletion-middle/: after.docx  before.docx  metadata.json
stemma-engine/testdata/ordering-deletion-start/: after.docx  before.docx  metadata.json
stemma-engine/testdata/ordering-insertion-middle/: after.docx  (+2 more)
stemma-engine/tests/: corpus_triage.rs  element_fidelity.rs  examples_reference.rs  operations_reference.rs  read_model_reference.rs  redline_invariants.rs  redline_word_parity.rs  stress_manifest.rs  untouched_block_fidelity.rs  untouched_block_fidelity_baseline.txt
stemma-mcp/: .gitignore  Cargo.toml  README.md  build_candidate_manifest.py  package_release_assets.sh  safe_artifact_conformance.py  smoke_test.py  verify_candidate_manifest.py  verify_release_tag_ruleset.py
stemma-mcp/mcpb/: .gitignore  build-mcpb.sh  manifest.json
stemma-mcp/npm/: README.md  build-npm-packages.sh  publish-npm-packages.sh  smoke-launcher.sh
stemma-mcp/plugin/: .gitignore  .mcp.json  build-plugin.sh
stemma-mcp/src/: instructions.md  main.rs  task_delivery.rs
stemma-mcp/tests/: cli.rs  opaque_metadata_surface.rs  test_build_candidate_manifest.py  test_publish_npm_packages.py  test_release_tag_ruleset.py  test_safe_artifact_conformance.py  test_verify_candidate_manifest.py  test_workflow_shell_syntax.py  tool_surface_invariants.rs
(+1741 files in other folders)
