[package]
name = "stemma-api"
version = "0.4.0"
edition = "2024"
# Uniform workspace toolchain floor (see stemma-engine/Cargo.toml for the full
# derivation). Enforced by the MSRV job in CI.
rust-version = "1.91"
description = "HTTP transport adapter for the stemma DOCX engine: parse/read/edit/serialize a .docx over JSON, with an in-memory session store. Drives the public api::Document facade. Example backend for the ProseMirror editor in stemma-examples."
repository = "https://github.com/stemma-sh/stemma"
keywords = ["docx", "ooxml", "tracked-changes", "http", "axum"]
categories = ["web-programming::http-server", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
stemma = { path = "../stemma-engine" }
