[package]
name = "stemma-artifacts"
version = "0.4.0"
edition = "2024"
rust-version = "1.91"
description = "Host-side artifact identity and safe create-new filesystem boundary for Stemma transports."
readme = "README.md"
repository = "https://github.com/stemma-sh/stemma"
keywords = ["artifact", "filesystem", "sha256", "safe-write"]
categories = ["filesystem"]
license = "MIT OR Apache-2.0"
publish = true

[features]
test-support = []

[dependencies]
same-file = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
serde_json = "1.0"
