[package]
name = "stemma-cli"
version = "0.4.0"
edition = "2024"
description = "Apply approved worklists to existing DOCX files as native tracked changes, with item outcomes and audit evidence."
repository = "https://github.com/stemma-sh/stemma"
keywords = ["docx", "cli", "tracked-changes", "ooxml", "redline"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true

[[bin]]
name = "stemma"
path = "src/main.rs"

[dependencies]
# version alongside path: local builds use the workspace copy; a crates.io
# publish resolves the same dependency from the registry.
stemma = { path = "../stemma-engine", version = "0.4.0" }
stemma-artifacts = { path = "../stemma-artifacts", version = "0.4.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
# The integration tests drive the built `stemma` binary and reopen its output
# with the engine to verify the redline/resolution round-trips by content.
stemma = { path = "../stemma-engine" }
serde_json = "1"
tempfile = "3"
xmltree = { package = "xmltree-ns", version = "0.13", features = ["attribute-order"] }
zip = "0.6.6"
