[package]
name = "stemma"
version = "0.2.0"
edition = "2024"
# Enforceable toolchain floor for the whole workspace. Edition 2024 wants 1.85;
# deps (zip -> time 0.3.49, and rmcp -> darling 0.23 in stemma-mcp) raise the
# build floor to 1.88; and a test here calls str::floor_char_boundary (stable
# since 1.91), which is the floor the `--all-targets` gate actually enforces.
# Kept uniform across crates and pinned by the MSRV job in CI.
rust-version = "1.91"
description = "Typed-IR DOCX compiler with tracked-change semantics: DOCX -> CanonDoc -> DOCX, with diff/merge, redline, and a post-serialization OOXML validator."
repository = "https://github.com/stemma-sh/stemma"
keywords = ["docx", "ooxml", "tracked-changes", "diff", "wordprocessingml"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = true
# Keep the published source crate lean and under the crates.io 10 MiB limit:
# the test corpus, integration tests, examples, and docs are not needed to
# build the library.
exclude = ["testdata/**", "tests/**", "docs/**", "examples/**"]

[dependencies]
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dashmap = "6"
quick-xml = "0.37"
rayon = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10.8"
similar = "2.6"
tracing = "0.1.40"
unicode-segmentation = "1.11"
xmltree = { package = "xmltree-ns", version = "0.13", features = ["attribute-order"] }
zip = "0.6.6"
zstd = "0.13"

[dev-dependencies]
zip = "0.6.6"
